2009-02-18  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Bug 23974: Deque::Remove would be a useful method.
        <https://bugs.webkit.org/show_bug.cgi?id=23974>

        Add Deque::remove and DequeIteratorBase<T>::operator=.

        Why was operator= added? Every concrete iterator (DequeIterator..DequeConstReverseIterator)
        was calling DequeIteratorBase::assign(), which called Base::operator=(). Base::operator=()
        was not implemented. This went unnoticed because the iterator copy code has been unused.

        * wtf/Deque.h:
        (WTF::Deque<T>::remove):
        (WTF::DequeIteratorBase<T>::removeFromIteratorsList):
        (WTF::DequeIteratorBase<T>::operator=):
        (WTF::DequeIteratorBase<T>::~DequeIteratorBase):

2009-02-18  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Holger Freyther.

        Fix symbols.filter location, and add other missing files to the
        autotools build, so that make dist works.

        * GNUmakefile.am:

2009-02-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Fixed failure in js1_5/Regress/regress-168347.js, as seen on the Oliver
        bot.
        
        Technically, both behaviors are OK, but we might as well keep this test
        passing.

        * runtime/FunctionPrototype.cpp:
        (JSC::insertSemicolonIfNeeded): No need to add a trailing semicolon
        after a trailing '}', since '}' ends a block, indicating the end of a
        statement.

2009-02-17  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        * runtime/FunctionPrototype.cpp:

2009-02-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Add assertion to guard against oversized pc relative calls.

        * assembler/X86Assembler.h:
        (JSC::X86Assembler::link):

2009-02-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        